--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,6 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -31,3 +25,153 @@ body {
     text-wrap: balance;
   }
 }
+@layer utilities{
+  .text1{
+    font-family: "Inter", sans-serif;
+font-size: 17px;
+font-weight: 500;
+line-height: 26.52px;
+
+
+
+
+  }
+  .text2{
+    font-family: "Inter";
+font-size: 12px;
+font-weight: 400;
+line-height: 14.52px;
+text-align: left;
+
+
+  }
+  .text3{
+    font-family: "Inter";
+font-size: 14px;
+font-weight: 500;
+line-height: 16.94px;
+
+
+
+
+  }
+  .text4{
+    font-family: "Inter";
+font-size: 14px;
+font-weight: 400;
+line-height: 20.58px;
+text-align: center;
+color: #525965;
+
+  }
+  .text5{
+    font-family: "Poppins";
+font-size: 14px;
+font-weight: 400;
+line-height: 21px;
+text-align: center;
+
+  }
+  .text6{
+    font-family: "Inter";
+    font-size: 12.73px;
+    font-weight: 500;
+    line-height: 15.41px;
+    text-align: center;
+    
+
+  }
+  .textSport{
+    font-family: "Poppins" sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: left;
+    
+
+  }
+  .textCollection{
+    font-family: "Poppins" sans-serif;
+font-size: 3.45vw;
+font-weight: 700;
+line-height: 3.625vw;
+text-align: left;
+
+  }
+  .textP{
+    font-family: "Inter" sans-serif;
+font-size: 0.9667vw;
+font-weight: 400;
+line-height: 1.564vw;
+text-align: center;
+
+  }
+  .collectionbg{
+    background: linear-gradient(180deg, #18282A 0%, #221A2C 100%);
+    
+
+  }
+  .circle{
+    box-shadow: 0px 4px 8px 0px #0000000D;
+  
+    background: linear-gradient(90deg, #1f1e2b 0%, #1f1e2b 100%);
+
+  }
+  .circle1{
+    box-shadow: 0px 4px 8px 0px #0000000D;
+
+  
+    background: linear-gradient(-90deg, #1f1e2b 0%, #1f1e2b 100%);
+  }
+  .circle2{
+
+
+    background: linear-gradient(-90deg, #F7F7F8 50%, 
+    #D9D9D9 100%);
+
+  }
+  .circle3{
+    background: linear-gradient(90deg, #F7F7F8 50%, 
+    #D9D9D9 100%);
+  }
+  .textAd{
+    font-family: "Inter";
+font-size: 20px;
+font-weight: 600;
+line-height: 24.2px;
+text-align: center;
+
+  }
+  .textAdp{
+    font-family: "Inter";
+font-size: 12.8px;
+font-weight: 400;
+line-height: 19px;
+width: 187.14px;
+height: 171px;
+margin: 0 auto;
+margin-top: 2px;
+
+
+
+
+  }
+  .frame{
+    box-shadow: 0px 10px 20px 0px #00000033;
+
+  }
+  .button12{
+    width: 124px;
+height:46px;
+background: #2C9CF0;
+box-shadow: 0px 4px 8px 0px #0000000D;
+border: none;
+border-radius: 3px;
+
+  }
+  .remove-scrollbars::-webkit-scrollbar{
+    display: none;
+}
+}
+
+
